2007-09-03 [paul]	0.7.2

	0.7.2 released

2007-08-16 [paul]	0.7.1cvs3

	* configure.ac
		use pkgconfig to check for gtk and glib

2007-07-23 [colin]	0.7.1cvs2

	* src/plugin.c
		Fix license

2007-07-11 [colin]	0.7.1cvs1

	* COPYING
	* src/plugin.c
	* src/smime.c
	* src/smime.h
		Upgrade to GPLv3 or later

2007-07-03 [paul]	0.7.1

	0.7.1 released

2007-06-21 [colin]	0.7.0cvs2

	* src/plugin.c
		Update plugin API

2007-05-04 [colin]	0.7.0cvs1

	* src/plugin.c
	* src/smime.c
		Add warning about encryption

2007-02-26 [paul]	0.7

	0.7 released

2007-02-23 [colin]	0.6.0cvs3

	* src/plugin.c
	* src/smime.c
		Make sure to reenable gpg-agent when
		necessary

2007-02-22 [paul]	0.6.0cvs2

	* src/plugin.c
	* src/smime.c
		Use our own sgpgme_data_release_and_get_mem
		to avoid the leak

2007-02-03 [colin]	0.6.0cvs1

	* src/plugin.c
	* src/smime.c
	* src/smime.h
		Fix copyright

2007-01-15 [paul]	0.6.0

	0.6.0 released

2007-01-12 [paul]	0.5.8cvs3

	* src/smime.c
		fix bug 1093, 'Decrypt of S/MIME signed+encrypted
		messages from Outlook 11'
		Thanks to Colin

2007-01-11 [colin]	0.5.8cvs2

	* src/plugin.c
	* src/smime.c
		Multiple RFC fixes

2007-01-09 [colin]	0.5.8cvs1

	* src/smime.c
		Add some error logging

2007-01-09 [paul]	0.5.8

	0.5.8 released

2006-12-19 [paul]	0.5.7cvs2

	* src/smime.c
		Fix decryption in some cases

2006-12-15 [ticho]	0.5.7cvs1

	* configure.ac
	* src/plugin.c
		Use check_plugin_version() for version check.

2006-12-04 [paul]	0.5.7

	0.5.7 released

2006-11-28 [paul]	0.5.6cvs3

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	0.5.6cvs2

	* src/Makefile.am
	* src/plugin.c
		renaming

2006-11-07 [paul]	0.5.6cvs1

	* ChangeLog
	* INSTALL
	* configure.ac
	* src/Makefile.am
	* src/plugin.c
	* src/smime.c
	* src/smime.h
		Name change

2006-11-07 [paul]	0.5.6

	0.5.6 released

2006-10-05 [paul]	0.5.5cvs2

	* src/Makefile.am
		remove reference to non-existan file, causing