@@ -1,3 +1,9 @@
+2007-10-03 [colin]	0.7.2cvs1
+
+	* src/Makefile.am
+	* src/smime.c
+		Fix warnings
+
 2007-09-03 [paul]	0.7.2
 
 	0.7.2 released
